--- a/app/views/team_players/_transfer_list_form.html.erb
+++ b/app/views/team_players/_transfer_list_form.html.erb
@@ -4,7 +4,7 @@
 	<div class="mdl-card__actions">
 		<div class="form-group">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <%= f.text_field :transfer_minimum_bid, value: team_player.player.player_value(Season.current.first), pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
+        <%= f.text_field :transfer_minimum_bid, value: team_player.player.player_value, pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
         <%= f.label "Transfer list price", class: "mdl-textfield__label" %>
         <span class="mdl-textfield__error">Invalid value.</span>
       </div>
