--- a/app/views/team_players/edit.html.erb
+++ b/app/views/team_players/edit.html.erb
@@ -20,7 +20,7 @@
 							Value
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= number_to_currency(team_player.player.player_value(Season.current.first), precision:0) %>
+							<%= number_to_currency(team_player.player.player_value, precision:0) %>
 						</td>
 					</tr>
 				</table>
