--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -20,11 +20,7 @@
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.text_field :name, class: "mdl-textfield__input" %>
         <%= f.label :name, "League name", class: "mdl-textfield__label" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="selectdiv">
-        <%= f.collection_select :competition_id, Competition.all, :id, :description %>
+        <%= f.hidden_field :competition_id, value: Competition.first.id %>
       </div>
     </div>
     <div class="form-group">
