Add some instructions to send invites

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -83,10 +83,9 @@
 						<li><%= link_to 'Games', league_games_path(@league), class: "mdl-button--primary" %></li>
 						<li><%= link_to 'Players', league_players_path(@league), class: "mdl-button--primary" %></li>
 						<li><%= link_to 'Transfers', league_transfers_path(@league), class: "mdl-button--primary" %></li>
-						<li><%= link_to 'Free agents', league_contracts_path(@league), class: "mdl-button--primary" %></li>
 					<% end %>
 					<% if @league.is_owned_by_this_user?(@current_user) %>
-						<li><%= link_to 'Invites', league_league_invites_path(@league), class: "mdl-button--primary" %></li>
+						<li><%= link_to 'Send invites', league_league_invites_path(@league), class: "mdl-button--primary" %></li>
 					<% else %>
 						<li><%= link_to 'Invites', leagues_path, class: "mdl-button--primary" %></li>
 					<% end %>
