--- a/app/views/notifier/league_invitation.html.erb
+++ b/app/views/notifier/league_invitation.html.erb
@@ -1,6 +1,6 @@
 <p>Hi,</p>
 
-<p><%= @league.user.full_name %> has invited to join <%= @league.name %> on Gaffer.</p>
+<p><%= @league.user.full_name %> has invited you to join <%= @league.name %> on Gaffer.</p>
 
 <p>If you're new to Gaffer League, sign up at <%= link_to 'gafferleague.com', 'https://gafferleague.com' %>  and you can create a team that will be added to the league.</p>
 
