--- a/app/views/league_invites/index.html.erb
+++ b/app/views/league_invites/index.html.erb
@@ -26,6 +26,7 @@
       </div>
       <div class="mdl-card__supporting-text">
         <ul class="horizontal-style">
+          <li><%= link_to "Back to league", league_path(@league), class: "mdl-button--primary" %></li>
           <li><%= link_to 'Send an invite', new_league_league_invite_path(@league), class: "mdl-button--primary" %></li>
         </ul>
       </div>
