--- a/app/views/shared/leagues/_your_leagues.html.erb
+++ b/app/views/shared/leagues/_your_leagues.html.erb
@@ -25,14 +25,16 @@
             <%= link_to truncate(league.name, length: 15), league, class: "content-link" %>
           </td>
           <td class="normal-text">
-            <%= league.teams.count %>
+            <%= league.teams.where(deleted_at: nil).count %>
           </td>
           <td class="normal-text">
             <%= league.league_invites.count %>
           </td>
-          <td class="mdl-data-table__cell--non-numeric normal-text">
-            <%= link_to 'Send invite', new_league_league_invite_path(league), class: "mdl-button--primary" %>
-          </td>
+          <% if league.is_owned_by_this_user?(@current_user) %>
+            <td class="mdl-data-table__cell--non-numeric normal-text">
+              <%= link_to 'Send invite', new_league_league_invite_path(league), class: "mdl-button--primary" %>
+            </td>
+          <% end %>
         </tr>
       <% end %>
       </table>
