--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 	  <meta name="msapplication-TileColor" content="#da532c">
 	  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	  <meta name="theme-color" content="#ffffff">
+	  <meta name="google-site-verification" content="cwD2D6IAAsoT8qu5s9IbqFmV4qATH0PpXC6SRku1IcQ" />
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 	  <%= csrf_meta_tags %>
 	</head>
