Add player news tab to team#show

--- a/app/views/shared/team_players/_details.html.erb
+++ b/app/views/shared/team_players/_details.html.erb
@@ -25,3 +25,6 @@
 <td class="normal-text next_up_details hide mdl-data-table__cell--non-numeric">
 	<%= team_player.player.active_game_week_opponent %> (<%= team_player.player.opponent_location_short %>)
 </td>
+<td class="normal-text news_details hide mdl-data-table__cell--non-numeric">
+  <%= team_player.player.news %>
+</td>
