--- a/app/views/shared/team_players/_table_header.html.erb
+++ b/app/views/shared/team_players/_table_header.html.erb
@@ -29,6 +29,9 @@
 	<th class="hide next_up_details mdl-data-table__cell--non-numeric">
 		<span>Opp</span>
 	</th>
+	<th class="hide news_details mdl-data-table__cell--non-numeric">
+		<span>News</span>
+	</th>
 	<th class="mdl-data-table__cell--non-numeric">
 		<span> </span>
 	</th>
