--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -76,7 +76,7 @@
 	    </div>
 
 	    <div class="mdl-card__actions">
-	    	<% fresh_news_items = news_items.where('created_at > ?', 2.weeks.ago) %>
+	    	<% fresh_news_items = news_items.where('created_at > ?', 4.days.ago) %>
 	    	<% if fresh_news_items.count > 0 %>
 		    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp mdl-data-table-fixed">
 		    		<% fresh_news_items.each do |news_item| %>
