COndense logic into transfer from transfer_item

--- a/app/views/transfers/_form.html.erb
+++ b/app/views/transfers/_form.html.erb
@@ -14,9 +14,13 @@
       </ul>
     </div>
   <% end %>
-  <!--
-  Parameters: {"utf8"=>"✓", "authenticity_token"=>"7TtDs+WUdy7EuaQsinMXhd56uVn+rulOt1UUvKr4x7M=", "transfer"=>{"primary_team_id"=>"3", "secondary_team_id"=>"6", "primary_team_accepted"=>"true", "secondary_team_accepted"=>"false", "transfer_item"=>{"sending_team_id"=>"6", "receiving_team_id"=>"3", "transfer_item_type"=>"Player", "cash_cents"=>"1779782", "team_player_id"=>"439"}}, "commit"=>"Place offer", "league_id"=>"2"}-->
+  
   <div class="mdl-card__actions">
+    <% if @transfer.id %>
+      <% team_player_value = @cash_offer %>
+    <% else %>
+      <% team_player_value = @team_player.get_transfer_listed_player_initial_bid %>
+    <% end %>
     <% primary_team = @current_user.get_team(@league) %>
     <% secondary_team = @team_player.team %>
     <%= f.hidden_field :primary_team_id, value: primary_team.id %>
@@ -29,7 +33,7 @@
       <%= f_ti_1.hidden_field :transfer_item_type, value: "Cash" %>
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <%= f_ti_1.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", value: @team_player.get_transfer_listed_player_initial_bid, class: "mdl-textfield__input" %>
+          <%= f_ti_1.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", value: team_player_value, class: "mdl-textfield__input" %>
           <%= f_ti_1.label "Tranfer bid", class: "mdl-textfield__label" %>
           <span class="mdl-textfield__error">Invalid amount.</span>
         </div>
@@ -45,7 +49,7 @@
 
     <div class="form-group">
       <%= f.submit "Place offer", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
-      <%= link_to "Cancel", league_transfers_path(@league), class: "cancel_link_anchor" %>
+      <%= link_to "Cancel", @back_url, class: "cancel_link_anchor" %>
     </div>
   </div>
 <% end %>
