--- a/app/views/transfers/show.html.erb
+++ b/app/views/transfers/show.html.erb
@@ -21,7 +21,7 @@
 										</li>
 										<% if !@transfer.is_a_transfer_listing || @transfer.primary_team.user == @current_user %>
 											<li>
-						          	<%= link_to "Negotiate", edit_league_transfer_transfer_item_path(league, @transfer, @transfer.get_cash_transfer_item), class: "mdl-button--primary" %>
+						          	<%= link_to "Negotiate", edit_league_transfer_path(league, @transfer), class: "mdl-button--primary" %>
 						          </li>
 						         <% end %>
 				          <% end %>
