--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -28,16 +28,7 @@
 			<ul class="horizontal-style-centre-form">
 				<% if owned && !owned_by_current_user %>
 					<li>
-						<%= render partial: 'shared/form_direct_transfer_bid', locals: {
-						league: league,
-						player: player_object,
-						primary_team: current_user_team_in_this_league,
-						secondary_team: team_player.team,
-						team_player: team_player,
-						truncate_to: 14 } %>
-					</li>
-					<li>
-						<%= link_to 'Make offer v2', new_league_transfer_path(league.id, {team_player_id: team_player.id}), class: "mdl-button--primary" %>
+						<%= link_to 'Make offer', new_league_transfer_path(league.id, {team_player_id: team_player.id}), class: "mdl-button--primary" %>
 					</li>
 				<% elsif !owned %>
 					<li><%= link_to 'Offer contract', new_league_contract_path(league.id, {player_id: player_object.id}), class: "mdl-button--primary" %></li>
