--- a/app/views/transfers/edit.html.erb
+++ b/app/views/transfers/edit.html.erb
@@ -1,1 +1,18 @@
-<%= render 'form' %>
+<div class="col-sm-12">
+  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+    <div class="mdl-card__title">
+      <h2 class="mdl-card__title-text">Edit offer for <%= @team_player.full_name(true, 13) %></h2>
+    </div>
+    <div class="mdl-card__supporting-text">
+      <div class="mdl-card__actions">
+        <%= render partial: 'shared/player_info', locals: {
+          player: @team_player.player,
+          team_player: @team_player,
+          owned: true,
+          owned_by_current_user: false} %>
+      </div>
+    </div>
+    <%= render 'form' %>
+  </div>
+</div>
+
