Move displaying of player news to player model

--- a/app/views/shared/_player_info.html.erb
+++ b/app/views/shared/_player_info.html.erb
@@ -44,7 +44,7 @@
       News
     </td>
     <td class="mdl-data-table__cell--non-numeric normal-text">
-      <%= team_player.display_news %>
+      <%= player.display_news %>
     </td>
   </tr>
 </table>
