Tidy up & simplify contract offer code

--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,10 +1,4 @@
-<% league = League.find(params[:league_id]) %>
-<% team = @current_user.teams.joins(:league).where('leagues.id = ?', league.id).first %>
-<% players_to_exlcude = Player.where(id: (Player.joins(team_players: [:team => :league]).where('leagues.id = ?', league.id) | Player.joins(:contracts).where('contracts.team_id = ?', team.id)).map(&:id)) %>
-<% direct_offer = params[:player_id] && (players_to_exlcude.where(id: params[:player_id].to_i).empty? ) ? true : false %>
-<% if direct_offer %>
-	<% player = Player.find(params[:player_id].to_i)%>
-<% end %>
+<% player = Player.find(params[:player_id].to_i)%>
 
 <div class="col-sm-12">
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
@@ -13,9 +7,7 @@
 				Offer contract
 			</h2>
 		</div>
-		<%= render partial: 'form', locals: { league: league, team: team, players_to_exlcude: players_to_exlcude, direct_offer: direct_offer, player: player } %>
-		<% if direct_offer %>
-			<%= render partial: 'shared/player_game_week_table', locals: {player: player} %>
-		<% end %>
+		<%= render partial: 'form', locals: { league: @league, team: @team, player: player } %>
+		<%= render partial: 'shared/player_game_week_table', locals: {player: player} %>
 	</div>
 </div>
