Update logo & hot fix for forced transfer bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -113,7 +113,7 @@ td.transfer-item-cell {
 }
 #main-nav {
 	font-size: 23px;
-	text-align: right;
+	text-align: center;
 }
 #wide-container{
 	min-width: 900px;
@@ -252,7 +252,7 @@ td.transfer-item-cell {
 	margin: 20px 0px;
 }
 .logo-icon {
-	width: 60%;
+	width: 100%;
 }
 .material-icons.error {
 	color: #ff6e40;
