--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,12 +30,12 @@
 	<body id="body_id">
 		<div class="container" id="wide-container">
 			<div id="header-row" class="row">
-				<div class="col-sm-3">
-					<%= link_to image_tag("gaffer_logo_263_x_328.png", class: "logo-icon"), root_path %>
+				<div class="col-sm-4">
+					<%= link_to image_tag("gaffer_logo_small_text_only.png", class: "logo-icon"), root_path %>
 				</div>
 				<% if logged_in? %>
 					<% current_user_leagues = League.includes(:teams).where('teams.user_id = :current_user OR leagues.user_id = :current_user', {current_user: @current_user}).references(:teams).distinct %>
-					<div id="main-nav" class="col-sm-9">
+					<div id="main-nav" class="col-sm-8">
 						<div class="row">
 							<% if current_user_leagues.count == 1 %>
 								<% current_user_team = Team.where(user: @current_user, league: current_user_leagues.first).first %>
@@ -57,7 +57,7 @@
 										<%= link_to "Create team", new_league_team_path(current_user_leagues.first) %>
 									</div>
 								<% end %>
-								<div class="col-sm-3 main-nav-item">
+								<div class="col-sm-4 main-nav-item">
 					    		<%= link_to "Log out", logout_path, method: :delete %>
 					    	</div>
 							<% elsif current_user_leagues.count > 1 %>
@@ -78,7 +78,7 @@
 				  	</div>
 			  	</div>
 		    <% else %>
-	        <div class="col-lg-8 col-sm-8 pull-right">
+	        <div class="col-sm-7 pull-right">
 	        	<%= render 'user_sessions/form' %>
 	        </div>
 		    <% end %>
