--- a/app/views/transfers/_your_active_transfer_headline.html.erb
+++ b/app/views/transfers/_your_active_transfer_headline.html.erb
@@ -2,4 +2,4 @@
 <% if this_transfer_is_a_listing %>
   <i class="material-icons large <%= transfer.is_winning_bid ? 'success' : 'error' %>">playlist_add_check</i>
 <% end %>
-Created <%= time_ago_in_words(transfer.created_at, include_seconds: true) %> ago <%= this_transfer_is_a_listing ? "(Completes in #{time_ago_in_words(transfer.transfer_listing_completes_at, include_seconds: false)})" : "" %>
+Created <%= time_ago_in_words(transfer.created_at, include_seconds: false) %> ago <%= this_transfer_is_a_listing ? "(Completes in #{time_ago_in_words(transfer.transfer_listing_completes_at, include_seconds: false)})" : "" %>
