UI changes to nav

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -256,6 +256,9 @@ td.transfer-item-cell {
 .league_invite_div {
 	margin: 20px 0px;
 }
+.log-in-form{
+  padding-left: 55px;
+}
 .log-in-form-fields-div {
   float: left;
   margin: 0px;
@@ -271,8 +274,8 @@ td.transfer-item-cell {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 0px;
-	width: 50%;
+  padding: 10px 0px;
+	width: 45%;
 }
 .material-icons.error {
 	color: #ff6e40;
