--- a/app/views/teams/display.html.erb
+++ b/app/views/teams/display.html.erb
@@ -1,4 +1,5 @@
 <div class="row">
+	<%= @team.sub_to_move_to_first_team %>
 	<div class="col-sm-12">
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
 			<div class="mdl-card__title">
